Add web jail bit for password setting

--- a/app/web/features/auth/locales/en.json
+++ b/app/web/features/auth/locales/en.json
@@ -22,6 +22,10 @@
         "new_password": "New password",
         "password_mismatch_error": "This does not match the new password you typed above."
     },
+    "jail_set_password_form": {
+        "title": "Set a password",
+        "explanation": "You have not previously set a password for your account. Please create one now to continue."
+    },
     "reset_password_form": {
         "enter_email": "Enter your username/email",
         "success_message": "Check your email for a reset password link!"
